--- a/Mapa Copa do Mundo.ipynb
+++ b/Mapa Copa do Mundo.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa84857",
+   "id": "3d3e32b4",
    "metadata": {},
    "source": [
     "# Dados"
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92c0a1e",
+   "id": "070474ed",
    "metadata": {},
    "source": [
     "# Adicionar ISO"
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "162ea471",
+   "id": "919e5402",
    "metadata": {},
    "source": [
     "# Trocar Nomes"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8401ff40",
+   "id": "4786ee34",
    "metadata": {},
    "source": [
     "# Mapa"
@@ -667,18 +667,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6745e501",
+   "id": "78c09943",
    "metadata": {},
    "source": [
     "# Resultado:\n",
-    "<img src=melhor_histórico/img.svg>\n",
+    "<img src=melhor_histórico\\img.svg>\n",
     "\n",
     "Como esta uma imagem não tem a iteratividade."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e8f59906",
+   "id": "b89b4c76",
    "metadata": {},
    "source": [
     "# Resto\n",
